# anthropic-hackathon

./: .env.example  .gitignore  CLAUDE.md  DEBUGGING_LOG.md  DEMO.md  GENERATED_TESTS.md  HACKATHON_COMPLETE.md  README.md  flipkart-snapshot.md  test-e2e.sh
.claude/: MCP_SETUP.md  settings.json  settings.local.json
.claude/hooks/: auto-format.sh  lint-check.sh
.claude/skills/qa-gen/: SKILL.md
.claude/skills/test-flow/: SKILL.md
.github/workflows/: ci.yml
backend/: main.py  mcp_server.py  pyproject.toml
backend/src/app/: main.py  models.py  services.py
backend/src/qa_agent/: __main__.py  agent.py  cli.py  doc_loader.py  models.py  prompts.py  validator.py  writer.py
backend/tests/: test_health.py  test_intent.py  test_multi_intent.py  test_rank.py
docs/: AI_COMMERCE_AGENT_ANALYSIS.md  AI_COMMERCE_AGENT_SPEC.md  HACKATHON_SCOPE.md  Use Case Questionnaire.md  devarchreq.md
extension/: package-lock.json  package.json  test-tabs.html  tsconfig.json  vite.config.ts
extension/src/: background.ts  content.ts  manifest.json  sidepanel.html  sidepanel.ts  types.ts
extension/src/adapters/: amazon.ts  flipkart.ts  types.ts  utils.ts
